Enhance API response structure and category management functionality